Attempts to resolve the "everything is too big" issue.

--- a/src/assets/styles/_theme.scss
+++ b/src/assets/styles/_theme.scss
@@ -13,18 +13,18 @@ $title-font-family: prequelrough;
 $title-font-size: calc(1.375rem + 1.5vw);
 $title-font-weight: 600;
 $tag-number-font-family: prequelrough;
-$tag-description-font-size: 1.5rem;
+$tag-description-font-size: 1.15rem;
 $tag-description-font-weight: 500;
 $tag-description-font-family: prequelroughitalic;
 $tag-number-font-size: 2rem;
 $tag-number-font-weight: 500;
 $tag-player-font-weight: 300;
 $tag-player-font-family: blackpine;
-$tag-player-font-size: 4rem;
+$tag-player-font-size: 3rem;
 $tag-player-line-height: 2rem;
 $tag-date-font-weight: 100;
 $tag-date-font-family: kingthings;
-$tag-date-font-size: 1.5rem;
+$tag-date-font-size: 1.15rem;
 $tag-date-line-height: 2rem;
 $breakpoint-mobile-sm: 20rem; // 320px
 $breakpoint-mobile-md: 26.25rem; // 420px
